# kafka-file-loader-rs

./: .editorconfig  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  env.sh  rustfmt.toml
examples/: stream.yml
src/: config.rs  constants.rs  fswatch.rs  main.rs  metrics.rs  model.rs  producer.rs  reject.rs  stream.rs  util.rs  worker.rs
src/csv/: engine.rs  field.rs  field_type.rs  field_type_impl.rs  mod.rs  reader.rs  record_reader.rs  util.rs
